Fix category column misalignment for mail ui list

--- a/mail/templates/pixelegg/app.less
+++ b/mail/templates/pixelegg/app.less
@@ -1215,3 +1215,9 @@ table#mail-index_previewAttachmentArea::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 #mail-index_nm.et2_nextmatch .egwGridView_outer thead tr {border-left: 12px solid @gray_30;}
+
+#mail-index_nm.et2_nextmatch .egwGridView_outer thead tr.row_category td:first-child > div {
+	margin-left: 0px;
+	padding-left: 0px;
+
+}
